Fixed flickering menus

--- a/style.css
+++ b/style.css
@@ -6020,8 +6020,8 @@ blockquote	{ padding: 0; margin: 0; border: none;}
 
 
 #nav	{ margin: 66px 0 0 0; padding: 0; list-style: none;}
-#nav li.level1	{ display: inline-block; *display:inline; *zoom:1; margin: 0; padding: 0; margin-right: 0;}
-#nav li.level1 a {display: inline-block; *display:inline; *zoom:1; font-weight: bold; color: #003366; text-decoration: none; padding: 10px 10px 10px 10px; font-size: 17px; line-height: 17px; -webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px; margin-bottom: 10px;}
+#nav li.level1	{ display: block; float: left; margin: 0; padding: 0; margin-right: 0;}
+#nav li.level1 a {display: block; float: left; font-weight: bold; color: #003366; text-decoration: none; padding: 10px 10px 10px 10px; font-size: 17px; line-height: 17px; -webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px; margin-bottom: 10px;}
 #nav li.has-sub a {padding-bottom: 20px; padding-right: 30px; background: url('img/caret-down.png') no-repeat right 12px; margin-bottom: 0;}
 #nav li.level1:hover a, #nav li.active a	{ background-color: #003366; color: #d6dde4; }
 #nav li.level1 a:hover  {background-color: #003366; color: #fff; }
@@ -6032,8 +6032,8 @@ body.admin-bar #nav .nav-flyout { top: 178px;}
 #nav li.level1:hover .nav-flyout	{ display: block;}
 
 #nav ul.level2	{ list-style: none; margin: 0; padding:0; /*-webkit-column-count: 2; -webkit-column-gap: 20px; -moz-column-count: 2; -moz-column-gap: 20px; column-count: 2; column-gap: 20px;*/}
-#nav li.level2	{ margin: 0; padding: 0; padding-left: 20px; padding-bottom: 3px;}
-#nav li.level2 a	{ margin: 0; padding: 0; font-weight: normal; font-size: 15px; background: none !important; font-size: 13px;}
+#nav li.level2	{ float: none; margin: 0; padding: 0; padding-left: 20px; padding-bottom: 3px;}
+#nav li.level2 a	{ float: none; margin: 0; padding: 0; font-weight: normal; font-size: 15px; background: none !important; font-size: 13px;}
 #nav li.level2 a:hover	{ text-decoration: underline;}
 
 #nav-toggle	{ position: absolute; top: 45px; right: 15px; width: 25px;}
@@ -6078,6 +6078,7 @@ body.admin-bar #nav .nav-flyout { top: 178px;}
 #hero.hero-small	{ background-position: center center;}
 .hero-small h1	{ padding: 30px 0 10px 0 !important;}
 
+#hero { -webkit-transition: 0.5s all; -moz-transition: 0.5s all; -ms-transition: 0.5s all; transition: 0.5s all;}
 .flyout-toggled #hero	{ opacity: 0.3;}
 
 #hero .searchform	{ padding-top: 35px; margin-bottom: 0;}
@@ -6210,8 +6211,8 @@ body.admin-bar #nav .nav-flyout { top: 178px;}
 	#logo { float: none; }
 	#nav { margin: 10px 0;}
 	
-	#nav .nav-flyout { top: 190px;}
-	body.admin-bar #nav .nav-flyout { top: 228px;}
+	#nav .nav-flyout { top: 200px;}
+	body.admin-bar #nav .nav-flyout { top: 238px;}
 	
 }
 
@@ -6248,8 +6249,8 @@ body.admin-bar #nav .nav-flyout { top: 178px;}
 	
 	#nav	{ margin: 10px 0 0 0 !important; display:none;}
 	#nav.toggled	{ display: block;}
-	#nav li.level1 {display: block; margin: 0; border-bottom: 1px solid #ccc;}
-	#nav li.level1 a { display:block; -webkit-border-radius: 0; padding: 10px 15px !important; margin-bottom: 0;}
+	#nav li.level1 {display: block; float: none; margin: 0; border-bottom: 1px solid #ccc;}
+	#nav li.level1 a { display:block; float: none; -webkit-border-radius: 0; -moz-border-radius: 0; -ms-border-radius: 0; border-radius: 0; padding: 10px 15px !important; margin-bottom: 0;}
 	#nav li.level2 {background-position: left 6px; margin-left: 20px;}
 	#nav li.level2 a {padding: 5px 0 !important;}
 	#nav li.level2 a:hover {background: #336699;}
